<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.edit_userinfo.view.DeleteAccountActivity">

    <ImageView
        android:id="@+id/delete_account_iv_logo"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/delete_account_iv_backbtn"
        android:layout_width="15dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_backbtn"
        app:layout_constraintTop_toTopOf="@id/delete_account_tv_title"
        app:layout_constraintBottom_toBottomOf="@id/delete_account_tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/delete_account_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/delete_account_title"
        android:textSize="30dp"
        android:fontFamily="@font/notosans_bold"
        android:includeFontPadding="false"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_account_iv_logo"
        />

    <TextView
        android:id="@+id/delete_account_tv_caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="회원탈퇴 주의사항"
        android:fontFamily="@font/font_medium"
        android:includeFontPadding="false"
        android:textSize="17dp"
        android:textColor="@color/colorPrimary"

        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_account_tv_title"
        />

    <TextView
        android:id="@+id/delete_account_tv_caution_must"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_semi_title"
        android:fontFamily="@font/font_regular"
        android:includeFontPadding="false"
        android:textSize="13dp"
        android:textColor="@color/colorSemiBlack"

        android:layout_marginLeft="32dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_account_tv_caution"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toTopOf="@+id/delete_account_btn_save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <CheckBox
            android:id="@+id/delete_account_check_agree"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_checkbox_primary_custom"
            android:button="@null"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:includeFontPadding="false"
            android:text="@string/delete_account_agree"
            android:textColor="@color/colorBlack"
            android:textSize="13dp"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/delete_account_btn_save"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:text="탈퇴"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundrect_primary_background_23dp"
        android:elevation="10dp"
        android:layout_gravity="center"
        android:textSize="19dp"
        android:textColor="@color/colorWhite"
        android:includeFontPadding="false"
        android:fontFamily="@font/font_bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>