<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.customer_center.view.CustomerCenterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customer_center_cl_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/customer_center_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="고객센터"
            android:textSize="20dp"
            android:fontFamily="@font/font_medium"
            android:includeFontPadding="false"
            android:textColor="@color/colorBlack"
            android:layout_marginVertical="17dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <ImageView
            android:id="@+id/customer_center_iv_crossbtn"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="17dp"
            android:src="@drawable/ic_crossbtn"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/customer_center_ll_egongil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="40dp"

        app:layout_constraintTop_toBottomOf="@+id/customer_center_cl_topbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egongil_name"
            android:fontFamily="@font/font_regular"
            android:includeFontPadding="false"
            android:textSize="17dp"
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egongil_address"
            android:fontFamily="@font/font_regular"
            android:includeFontPadding="false"
            android:textSize="13dp"
            android:textColor="@color/colorSemiTitle"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egongil_email"
            android:fontFamily="@font/font_medium"
            android:includeFontPadding="false"
            android:textSize="13dp"
            android:textColor="@color/colorGrayInactive"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/customer_center_iv_bulb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bulb_primary"

        android:layout_marginTop="70dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintTop_toBottomOf="@+id/customer_center_ll_egongil"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/customer_center_tv_asked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="자주 하는 질문"
        android:fontFamily="@font/font_regular"
        android:textSize="17dp"
        android:includeFontPadding="false"
        android:textColor="@color/colorPrimary"

        android:layout_marginTop="69dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@+id/customer_center_iv_bulb"
        app:layout_constraintTop_toBottomOf="@+id/customer_center_ll_egongil"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customer_center_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"

        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintTop_toBottomOf="@+id/customer_center_tv_asked"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>