<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.signup.SignupTermsActivity">

    <ImageView
        android:id="@+id/signup_iv_logo"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signup_iv_backbtn"
        android:layout_width="15dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_backbtn"
        app:layout_constraintTop_toTopOf="@id/signup_tv_title"
        app:layout_constraintBottom_toBottomOf="@id/signup_tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/signup_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/signup_title"
        android:textSize="30dp"
        android:fontFamily="@font/notosans_bold"
        android:includeFontPadding="false"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_iv_logo"
        />

    <TextView
        android:id="@+id/signup_tv_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="이용약관 동의"
        android:fontFamily="@font/font_medium"
        android:includeFontPadding="false"
        android:textSize="17dp"
        android:textColor="@color/colorPrimary"

        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_tv_title"
        />

    <LinearLayout
        android:id="@+id/signup_ll_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_margin="33dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_tv_terms"
        app:layout_constraintRight_toRightOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/signup_check_all"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_checkbox_primary_custom"
                android:button="@null"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:includeFontPadding="false"
                android:text="모두 동의합니다."
                android:textColor="@color/colorBlack"
                android:textSize="13dp"
                android:layout_marginLeft="7dp"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <CheckBox
                android:id="@+id/signup_check_service"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_checkbox_primary_custom"
                android:button="@null"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_terms_service"
                android:fontFamily="@font/font_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorSemiBlack"
                android:textSize="10dp"
                android:layout_marginLeft="7dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/signup_check_service"/>

            <TextView
                android:id="@+id/signup_tv_service_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="보기  >"
                android:textSize="10dp"
                android:fontFamily="@font/font_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorBlack"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <CheckBox
                android:id="@+id/signup_check_privacy"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_checkbox_primary_custom"
                android:button="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_terms_privacy"
                android:fontFamily="@font/font_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorSemiBlack"
                android:textSize="10dp"
                android:layout_marginLeft="7dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/signup_check_privacy"/>
            <TextView
                android:id="@+id/signup_tv_privacy_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="보기  >"
                android:textSize="10dp"
                android:fontFamily="@font/font_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorBlack"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="35dp">
            <CheckBox
                android:id="@+id/signup_check_marketing"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_checkbox_primary_custom"
                android:button="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_terms_marketing"
                android:fontFamily="@font/font_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorSemiBlack"
                android:textSize="10dp"
                android:layout_marginLeft="7dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/signup_check_marketing"/>
            <TextView
                android:id="@+id/signup_tv_marketing_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="보기  >"
                android:textSize="10dp"
                android:fontFamily="@font/font_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorBlack"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>


    <Button
        android:id="@+id/signup_btn_terms"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/roundrect_primary_background_23dp"
        android:elevation="10dp"

        android:text="다음"
        android:textColor="@color/colorWhite"
        android:textSize="19dp"
        android:includeFontPadding="false"
        android:fontFamily="@font/font_bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>